src/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }
  backend "s3" {}
}

locals {
  region = "us-east-2"
  common_tags = {
    project = "nku-iac-security"
    owner   = "Dakota"
  }
}

provider "aws" {
  region = local.region
}

resource "aws_vpc" "demo_vpc" {
  cidr_block = "10.0.0.0/16"
  tags       = local.common_tags
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.demo_vpc.id
  tags   = local.common_tags
}

resource "aws_security_group" "block_all_inbound" {

  name        = "block_all_inbound"
  description = "Blocks all inbound traffic while allowing outbound"
  vpc_id      = aws_vpc.demo_vpc.id
  
  egress = [{
    description      = "allow all outbound"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
    prefix_list_ids = []
    security_groups = []
    self = false
  }]


  tags = local.common_tags
}
resource "aws_subnet" "demo_subnet_public" {
  vpc_id     = aws_vpc.demo_vpc.id
  cidr_block = "10.0.1.0/24"
  tags       = local.common_tags
}


resource "aws_instance" "web" {
  ami                    = data.aws_ami.amazon-linux-2.id
  instance_type          = "t3.micro"
  subnet_id              = aws_subnet.demo_subnet_public.id
  vpc_security_group_ids = [aws_security_group.block_all_inbound.id]
  iam_instance_profile   = aws_iam_instance_profile.ssm_managed_instance_prof
  tags                   = local.common_tags
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.demo_vpc.id

  route = [
    {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.igw.id 
    }
  ]

  tags = local.common_tags
}

resource "aws_route_table_association" "public_route_table_assoc" {
  subnet_id      = aws_subnet.demo_subnet_public.id
  route_table_id = aws_route_table.public_route_table.id
}
resource "aws_iam_instance_profile" "ssm_managed_instance_prof" {
  role = aws_iam_role.ssm_managed_role.name
}

resource "aws_iam_role" "ssm_managed_role" {
  path                = "/"
  managed_policy_arns = ["arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"]
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Sid    = ""
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      },
    ]
  })
}
data "aws_ami" "amazon-linux-2" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-ebs"]
  }
}



data "aws_secretsmanager_secret" "testing-secrets-in-state" {
  arn = "arn:aws:secretsmanager:us-east-2:391294193874:secret:terraform-testing-q2Lwwo"
}

data "aws_secretsmanager_secret_version" "retrieve-secret-value" {
  secret_id = data.aws_secretsmanager_secret.testing-secrets-in-state.id
}
